[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/animations/FloatingText.gd" type="Script" id=1]

[node name="FloatingText" type="Position2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="LeftShadow" type="Label" parent="."]
margin_left = -34.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0.145098, 0.145098, 0.133333, 1 )
text = "32"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightShadow" type="Label" parent="."]
margin_left = -32.0
margin_top = -8.0
margin_right = 34.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0.145098, 0.145098, 0.133333, 1 )
text = "32"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -33.0
margin_top = -8.0
margin_right = 33.0
margin_bottom = 6.0
custom_colors/font_color_shadow = Color( 0.145098, 0.145098, 0.133333, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "32"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
